--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,4 +3,4 @@
 <title>LAGAW</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel='stylesheet' href='/css/style.css' />
+<link rel="stylesheet" type="text/css" href="/stylesheets/styles.css"/>
