--- a/views/partials/side-nav-bar.ejs
+++ b/views/partials/side-nav-bar.ejs
@@ -1,10 +1,8 @@
 <nav class="side-nav-bar">
-    <ul class="">
-        <button>PLACES & LANDMARKS</button>
-        <button>CULTURE & FESTIVALS</button>
-        <button>FOOD</button>
-        <button>ACCOMMODATION</button>
-        <button>TRAFFIC</button>
-        <button>SETTINGS</button>
-    </ul>
+    <li class="side-child"><a href="#home">PLACES & LANDMARKS</a></li>
+    <li class="side-child"><a href="#news">CULTURE & FESTIVALS</a></li>
+    <li class="side-child"><a href="#contact">FOOD</a></li>
+    <li class="side-child"><a href="#about">ACCOMMODATION</a></li>
+    <li class="side-child"><a href="#about">TRAFFIC</a></li>
+    <li class="side-child"><a href="#about">SETTINGS</a></li>
 </nav>
