--- a/views/partials/side-nav-bar.ejs
+++ b/views/partials/side-nav-bar.ejs
@@ -1,8 +1,55 @@
-<nav class="side-nav-bar">
-    <li class="side-child"><a href="#home">PLACES & LANDMARKS</a></li>
-    <li class="side-child"><a href="#news">CULTURE & FESTIVALS</a></li>
-    <li class="side-child"><a href="#contact">FOOD</a></li>
-    <li class="side-child"><a href="#about">ACCOMMODATION</a></li>
-    <li class="side-child"><a href="#about">TRAFFIC</a></li>
-    <li class="side-child"><a href="#about">SETTINGS</a></li>
+<nav class="side-nav-bar" style="vertical-align: middle">
+    <li class="side-child"><a>
+        <a href="">
+            <div>
+                <img src="/img/places-and-landmarks.png">
+                <p>PLACES & LANDMARKS</p>
+            </div>
+        </a>
+    </li>
+
+    <li class="side-child">
+        <a href="">
+            <div>
+                <img src="/img/culture-and-festivals.png">
+                <p>CULTURE & FESTIVALS</p>
+            </div>
+        </a>
+    </li>
+
+    <li class="side-child">
+        <a href="">
+            <div>
+                <img src="/img/food.png">
+                <p>FOOD</p>
+            </div>
+        </a>
+    </li>
+
+    <li class="side-child">
+        <a href="">
+            <div>
+                <img src="/img/accommodation.png">
+                <p>ACCOMMODATION</p>
+            </div>
+        </a>
+    </li>
+
+    <li class="side-child">
+        <a href="">
+            <div>
+                <img src="/img/traffic.png">
+                <p>TRAFFIC</p>
+            </div>
+        </a>
+    </li>
+
+    <li class="side-child">
+        <a href="">
+            <div>
+                <img src="/img/settings.png">
+                <p>SETTINGS</p>
+            </div>
+        </a>
+    </li>
 </nav>
