--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -1,6 +1,10 @@
 <ul class="top-nav-bar">
     <!--button for side navigation bar-->
-    <li class="top-child"><button class="menu">MENU</button></li>
+    <li class="top-child">
+        <button>
+            <img class="menu-btn" src="/img/side-nav-bar-button.png">
+        </button>
+    </li>
         
     <!--top navigation bar elements-->
     <li class="top-child"><a class="home" href="/pages/home">LAGAW</a></li>
@@ -10,20 +14,29 @@
     <li class="top-child">
         <form>
             <input class="search-bar" type="search" id="query" placeholder="Search..">
-            <button>Search</button>
+            <button class="search-bar-button"><img src="/img/search.png"></button>
         </form>
     </li>
             
     
     <li class="top-child">
-        <button class="mode">MODE</button>
+        <button class="mode">
+            <img src="/img/mode.png">
+        </button>
     </li>
-        
+    
+
+    <li class="top-child">
+        <p class="font-white">Hi, User!</p>
+    </li>
     
     <li class="top-child">
-        <p>Welcome to</p><p>Iloilo City!</p>
+        <p class="font-white">Welcome to</p>
     </li>
-        
+    
+    <li class="top-child">
+        <p class="font-peach">Iloilo City!</p>
+    </li>
 
     <li class="top-child">
         <a href="#about"><img class="user-picture" src="" alt="User picture"></a>
