--- a/views/partials/side-nav-bar.ejs
+++ b/views/partials/side-nav-bar.ejs
@@ -1,6 +1,6 @@
-<nav class="side-nav-bar" style="vertical-align: middle">
-    <li class="side-child"><a>
-        <a href="">
+<nav class="side-nav-bar">
+    <li class="side-child">
+        <a href="/places-and-landmarks">
             <div>
                 <img src="/img/places-and-landmarks.png">
                 <p>PLACES & LANDMARKS</p>
@@ -9,7 +9,7 @@
     </li>
 
     <li class="side-child">
-        <a href="">
+        <a href="/culture-and-festivals">
             <div>
                 <img src="/img/culture-and-festivals.png">
                 <p>CULTURE & FESTIVALS</p>
@@ -18,7 +18,7 @@
     </li>
 
     <li class="side-child">
-        <a href="">
+        <a href="/food">
             <div>
                 <img src="/img/food.png">
                 <p>FOOD</p>
@@ -27,16 +27,17 @@
     </li>
 
     <li class="side-child">
-        <a href="">
+        <a href="/accommodation">
             <div>
                 <img src="/img/accommodation.png">
-                <p>ACCOMMODATION</p>
+                <!--Accomm. is short for Accommodation-->
+                <p>ACCOMM.</p>
             </div>
         </a>
     </li>
 
     <li class="side-child">
-        <a href="">
+        <a href="/traffic">
             <div>
                 <img src="/img/traffic.png">
                 <p>TRAFFIC</p>
@@ -45,7 +46,7 @@
     </li>
 
     <li class="side-child">
-        <a href="">
+        <a href="/settings">
             <div>
                 <img src="/img/settings.png">
                 <p>SETTINGS</p>
