--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -7,7 +7,7 @@
     </li>
         
     <!--top navigation bar elements-->
-    <li class="top-child"><a class="home" href="/pages/home">LAGAW</a></li>
+    <li class="top-child"><a class="home" href="/home">LAGAW</a></li>
         
     
     <!--search bar-->
@@ -39,6 +39,6 @@
     </li>
 
     <li class="top-child">
-        <a href="#about"><img class="user-picture" src="" alt="User picture"></a>
+        <a href="/user"><img class="user-picture" src="/img/placeholder.jpg" alt="User picture"></a>
     </li>
 </ul>
