New in icons, partial ejs, css, & js
In icons,
- all icons in 24x24 resolution except side navigation bar button icon

In partial ejs files,
- making some class members to id members

- new class member names for css advantages

- new link to jscript files in head.ejs

In css file,
- adjustments in search bar and buttons

In js files,
- light-dark-mode.js for light/dark mode (Ongoing construction, does not work)

- side-nav-bar.js to show/hide side navigation bar (Ongoing construction, does not work)

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,3 +4,5 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css"/>
+<script src="/js/light-dark-mode.js"></script>
+<script src="/js/side-nav-bar.js"></script>
