--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,6 +1,6 @@
-li{
+/*li{
     border: 1px solid black;
-}
+}*/
 
 a{
     text-decoration: none;
@@ -8,15 +8,16 @@ a{
 
 body{
     margin: 0px;
-}
-/*body{
+    /*
     Inverts the color
     filter: invert(1);
-}*/
+    */
+}
+
 
 /* TOP NAVIGATION BAR */
 
-.top-nav-bar {
+#top-nav-bar {
     box-sizing: border-box;
     
     position: -webkit-sticky;
@@ -38,43 +39,45 @@ body{
 
 .font-white{
 
-
-    height: 20px;
-
     font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
-    text-align: center;
-
+    margin: 0px;
     color: #EAF4FE;
 }
 
 .font-peach{
 
-    height: 20px;
-
     font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
-    text-align: center;
-
+    margin: 0px;
     color: #FDC28B;
 
 }
 
 
 .menu-btn {
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
 }
 
-.mode {
+#light {
     width: 64px;
     height: 64px;
+    visibility: visible;
+    display: inline;
+}
+
+#dark {
+    width: 64px;
+    height: 64px;
+    visibility: hidden;
+    display: none;
 }
 
 .user-picture {
@@ -82,6 +85,7 @@ body{
     height: 80px;
     border-radius: 100%;
     object-fit: cover;
+    margin-left: 10px;
 }
 
 .home {
@@ -109,15 +113,24 @@ body{
     border-radius: 0px 25px 25px 0px;
 }
 
+.top-child.greeting{
+    columns:4em;
+}
+
+input[type=search]{
+    padding: 0 20px;
+    font-size: 20px;
+}
+
 
 
 /* SIDE NAVIGATION BAR */
 
-.side-nav-bar{
+#side-nav-bar{
     position: absolute;
     width: 85px;
     height: 1080px;
-
+    visibility: visible;
     margin: auto;
     background: #1B1B1B;
 }
@@ -142,6 +155,9 @@ body{
 
 button {
     background-color: transparent;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: none;
 }
 
 ul{
