--- a/views/partials/side-nav-bar.ejs
+++ b/views/partials/side-nav-bar.ejs
@@ -1,4 +1,4 @@
-<nav class="side-nav-bar">
+<nav id="side-nav-bar">
     <li class="side-child">
         <a href="/places-and-landmarks">
             <div>
