--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,5 +4,6 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css"/>
-<script src="/js/light-dark-mode.js"></script>
-<script src="/js/side-nav-bar.js"></script>
+<script defer src="/js/light-dark-mode.js"></script>
+<script defer src="/js/side-nav-bar.js"></script>
+<script defer src="/js/active-page.js"></script>
