--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -7,14 +7,14 @@
     </li>
         
     <!--top navigation bar elements-->
-    <li class="top-child"><a class="home" href="/home">LAGAW</a></li>
+    <li class="top-child"><a id="home" href="/home">LAGAW</a></li>
         
     
     <!--search bar-->
     <li class="top-child">
-        <form>
-            <input class="search-bar" type="search" id="query" placeholder="Search..">
-            <button class="search-bar-button"><img src="/img/search.png"></button>
+        <form id="search-bar">
+            <input id="search-bar-input" type="search" id="query" placeholder="Search..">
+            <button id="search-bar-button"><img src="/img/search.png"></button>
         </form>
     </li>
             
