--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -21,9 +21,9 @@ body{
     box-sizing: border-box;
     
     position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
 
-    width: auto;
+    width: 100%;
     height: 50px;
     margin: 0px;
 
@@ -107,9 +107,10 @@ body{
     color: #FDC28B;
 }
 
-#search-bar{
+.search-bar{
     padding-left: 210px;
     padding-right: 210px;
+    display: flex;
 }
 
 #search-bar-input{
@@ -118,14 +119,17 @@ body{
     border-radius: 25px 0px 0px 25px;
 }
 
-#search-bar-button{
+.search-bar-button{
     border-radius: 0px 25px 25px 0px;
+    height: 30px;
     align-items: center;
     background-color: grey;
+    display: flex;
 }
 
 button#search-bar-button{
     border-radius: 0px 25px 25px 0px;
+    height: 30px;
     align-items: center;
     background-color: grey;
 }
@@ -147,7 +151,8 @@ input[type=search]{
 
 #side-nav-bar{
     position: absolute;
-    width: 75px;
+
+    width: 70px;
     height: 1080px;
     visibility: visible;
     margin: auto;
@@ -156,9 +161,9 @@ input[type=search]{
 
 
 .side-child{
-    display: inline-block;
+    position: fixed;
     vertical-align: middle;
-
+    
     text-align: center;
     margin: auto;
     width: 63px;
