--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,11 +1,13 @@
+/* MAINTENANCE ELEMENTS */
+
 /*{
     border: 1px solid black;
 }*/
 
 
+/* UNIVERSAL ELEMENTS */
 
-
-a{
+a, li{
     text-decoration: none;
 }
 
@@ -21,96 +23,58 @@ body{
 /* TOP NAVIGATION BAR */
 
 #top-nav-bar {
-    box-sizing: border-box;
-    
-    position: -webkit-sticky;
-    position: fixed;
-
-    width: 100%;
-    height: 50px;
-    margin: 0px;
-
     background: #1B1B1B;
-    box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.25);
     border-radius: 0px;
-    
+    box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: space-between;
+    height: 6.5%;
+    margin: 0px;
+    position: fixed;
+    width: 100%;   
 }
 
 .top-child{
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.font-white{
-
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    margin: 0px;
-    color: #EAF4FE;
-}
-
-.font-peach{
-
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
-    margin: 0px;
-    color: #FDC28B;
-
+    list-style-type: none;
+    display: flex;
+    align-items: center;
 }
 
 #menu{
-    float: left;
-    width: 5%;
-    height: 49px;
-    padding: none;
-    margin: none;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 96px;
 }
 
 #menu-btn {
-    width: 20px;
-    height: 20px;
-    margin-left: 120%;
-    margin-top: 65%;
+    width: 30px;
+    height: 30px;
 }
 
+
 #home{
-    float: left;
-    width: 8%;
-    margin-top: 5px;
+    display: flex;
+    align-items: center;
 }
 
 #home-btn {
+
     width: 112px;
-    height: 40px;
+    height: 100%;
 
     font-family: sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
-    line-height: 40px;
-    display: flex;
+
 
     color: #FDC28B;
 }
 
-#search-bar{
-    float: left;
-    width:640px;
-    padding-top: 10px;
-    padding-left: 14.7%;
-    padding-right: 14.7%;
-
-}
-
 #search-bar-input{
     float: left;
-    width: 600px;
+    width: 350px;
     height: 30px;
     border-radius: 25px 0px 0px 25px;
 }
@@ -119,16 +83,10 @@ body{
     float: left;
     border-radius: 0px 25px 25px 0px;
     height: 30px;
+    width: 50px;
     align-items: center;
     background-color: grey;
 
-}
-
-button#search-bar-button{
-    border-radius: 0px 25px 25px 0px;
-    height: 30px;
-    align-items: center;
-    background-color: grey;
 }
 
 input[type=search]{
@@ -137,11 +95,13 @@ input[type=search]{
 }
 
 #mode{
+    display: flex;
+    align-items: center;
     float: left;
+    height: 100%;
 }
 
 #light {
-    margin-top: 5px;
     width: 45px;
     height: 45px;
     visibility: visible;
@@ -149,7 +109,6 @@ input[type=search]{
 }
 
 #dark {
-    margin-top: 5px;
     width: 45px;
     height: 45px;
     visibility: hidden;
@@ -159,9 +118,6 @@ input[type=search]{
 #greeting{
     float:left;
     columns:4em;
-    margin-top: 6px;
-    margin-left: 8px;
-    margin-right: 8px;
 }
 
 #user{
@@ -170,7 +126,7 @@ input[type=search]{
 
 #user-picture {
 
-    margin-top: 5px;
+    margin-left: 5px;
     width: 40px;
     height: 40px;
     border-radius: 100%;
@@ -178,7 +134,31 @@ input[type=search]{
 
 }
 
+.font-white{
+    font-family: sans-serif;
+    font-style: normal;
+    color: #EAF4FE;
+}
 
+#greeting > .font-white{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    margin: 0px;
+}
+
+.font-peach{
+    font-family: sans-serif;
+    font-style: normal;
+    color: #FDC28B;
+}
+
+#greeting > .font-peach{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    margin: 0px;
+}
 
 
 
@@ -186,24 +166,22 @@ input[type=search]{
 /* SIDE NAVIGATION BAR */
 
 #side-nav-bar{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     
     position: fixed;
-    padding-top: 50px;
+    top: 6.5%;
     width: 5%;
-    height: 100%;
-    visibility: hidden;
-    margin: auto;
+    height: 94%;
+    visibility: visible;
     background: #1B1B1B;
 }
 
 
 .side-child{
-    width: 67px;
-    margin: auto;
     text-align: center;
     list-style-type: none;
-    vertical-align: middle;
-    padding: 30px 0px 30px 0px;
 }
 
 .side-child a div p{
