Changes in light-dark-mode.js and affected ejs.
Changed to single color-theme element instead of light and dark in top-nav-bar.ejs.
Changed to switching source image instead of hidden and visible tags in js.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -101,18 +101,11 @@ input[type=search]{
     height: 100%;
 }
 
-#light {
+#color-theme {
     width: 45px;
     height: 45px;
     visibility: visible;
     display: inline;
-}
-
-#dark {
-    width: 45px;
-    height: 45px;
-    visibility: hidden;
-    display: none;
 }
 
 #greeting{
