--- a/views/partials/top-nav-bar.ejs
+++ b/views/partials/top-nav-bar.ejs
@@ -24,11 +24,8 @@
     <li class="top-child" >
         <!--light/dark mode-->
         <div id="mode">
-            <button id="light" onclick="lightDarkMode()">
-                <img src="/img/light.png">
-            </button>
-            <button id="dark" onclick="lightDarkMode()">
-                <img src="/img/dark.png">
+            <button id="color-theme" onclick="lightDarkMode()">
+                <img src="/img/light.png" id="theme-icon">
             </button>
         </div>
         <!--greeting-->
