--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -120,6 +120,7 @@ input[type=search]{
 #user-picture {
 
     margin-left: 5px;
+    margin-right: 5px;
     width: 40px;
     height: 40px;
     border-radius: 100%;
