More responsive css improvements
- minor fixes in css file

--- a/views/partials/side-nav-bar.ejs
+++ b/views/partials/side-nav-bar.ejs
@@ -1,4 +1,5 @@
 <nav id="side-nav-bar">
+    <!--button for side navigation bar-->
     <li class="side-child">
         <a href="/places-and-landmarks">
             <div>
