--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -23,16 +23,33 @@ body{
 /* TOP NAVIGATION BAR */
 
 #top-nav-bar {
+    min-width: 460px;
     background: #1B1B1B;
     border-radius: 0px;
     box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: space-between;
-    height: 6.5%;
+    flex-wrap: wrap;
     margin: 0px;
     position: fixed;
     width: 100%;   
 }
+
+@media only screen and (max-width: 880px) {
+    #top-nav-bar{
+        justify-content: center;
+    }
+    .top-child{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    #side-nav-bar{
+        height: ;
+    }
+    .side-child a div p{
+        visibility: hidden;
+    }
+  }
 
 .top-child{
     list-style-type: none;
@@ -43,13 +60,13 @@ body{
 #menu{
     display: flex;
     justify-content: center;
-    height: 100%;
-    width: 96px;
+    align-items: center;
+    width: 85px;
 }
 
 #menu-btn {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
 }
 
 
@@ -72,21 +89,39 @@ body{
     color: #FDC28B;
 }
 
+#search-bar{
+    display: flex;
+}
+
+#search-bar-form{
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 300px;
+}
+
 #search-bar-input{
-    float: left;
-    width: 350px;
+    width: 100%;
     height: 30px;
-    border-radius: 25px 0px 0px 25px;
+    border-radius: 12px 0px 0px 12px;
+    border: 0;
 }
 
 #search-bar-button{
-    float: left;
-    border-radius: 0px 25px 25px 0px;
+    display: flex;
+    border-radius: 0px 12px 12px 0px;
     height: 30px;
-    width: 50px;
+    width: 60px;
+    justify-content: center;
     align-items: center;
     background-color: grey;
+}
 
+#search-bar-button > img{
+    height:15px;
+    width:15px;
 }
 
 input[type=search]{
@@ -97,30 +132,32 @@ input[type=search]{
 #mode{
     display: flex;
     align-items: center;
-    float: left;
-    height: 100%;
 }
 
 #color-theme {
     width: 45px;
     height: 45px;
     visibility: visible;
-    display: inline;
 }
 
 #greeting{
-    float:left;
-    columns:4em;
+    margin-left: 10px;
+    margin-right: 10px;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
-#user{
-    float: left;
+#greeting > #top{
+    font-weight: 800;
+    font-size: 18px;
+    color: white
 }
 
 #user-picture {
 
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
     width: 40px;
     height: 40px;
     border-radius: 100%;
@@ -129,7 +166,7 @@ input[type=search]{
 }
 
 .font-white{
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
     font-style: normal;
     color: #EAF4FE;
 }
@@ -142,7 +179,7 @@ input[type=search]{
 }
 
 .font-peach{
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
     font-style: normal;
     color: #FDC28B;
 }
@@ -163,17 +200,18 @@ input[type=search]{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    
+    top: 25px;
     position: fixed;
-    top: 6.5%;
-    width: 5%;
-    height: 94%;
-    visibility: visible;
+    width: 85px;
+    height: 100%;
+    visibility: hidden;
     background: #1B1B1B;
 }
 
 
 .side-child{
+    display: flex;
+    flex-direction: column;
     text-align: center;
     list-style-type: none;
 }
