Start Construction of home.ejs
In css
- setting the background image of first content
- design of first content

In home.ejs
- setting of first content (nearly complete)
- setting of second content (ongoing construction)

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -6,11 +6,38 @@
         <%- include('../partials/head'); %>
     </head>
     <body>
+        
         <!-- side-nav-bar.ejs -->
         <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
+        
+        <div id="home1">
+            <div id="home11">
+                <div id="home111">
+                    <p class="font-white" id="title">ABOUT ILOILO</p>
+                    <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
+                    Wand betrayal parseltongue soul detention elf lion back his. 
+                    Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
+                    Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
+                    Bat forbidden cabbage parchment sunshine. 
+                    Bag moon ground moon quidditch sight grim. </p>
+                </div>
+            </div>
+            
+        </div>
 
+        <div id="home2">
+            <div>
+                <p class="font-white">THE CITY/'S MOST FAMOUS HIGHLIGHTS</p>
+                <p class="font-white"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
+                    Wand betrayal parseltongue soul detention elf lion back his. 
+                    Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
+                    Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
+                    Bat forbidden cabbage parchment sunshine. 
+                    Bag moon ground moon quidditch sight grim. </p>
+            </div>
+        </div>
         
     </body>
 </html>
