--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -31,8 +31,11 @@ body{
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 0px;
-    position: fixed;
-    width: 100%;   
+    position: sticky;
+    width: 100%;
+    top: 0;
+
+    z-index: 1;
 }
 
 @media only screen and (max-width: 880px) {
@@ -44,7 +47,7 @@ body{
         padding-bottom: 10px;
     }
     #side-nav-bar{
-        height: ;
+        /*height: idk pa huhu need mag santo sa dalom sng top-nav-bar;*/
     }
     .side-child a div p{
         visibility: hidden;
@@ -67,6 +70,9 @@ body{
 #menu-btn {
     width: 20px;
     height: 20px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -197,6 +203,7 @@ input[type=search]{
 /* SIDE NAVIGATION BAR */
 
 #side-nav-bar{
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -236,4 +243,45 @@ ul{
 
 a:is(:link, :active, :visited).active{
     color:#FDC28B;
+}
+
+
+
+/* HOME PAGE */
+
+#home1{
+    background-image: url("/img/paraw-regatta.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    height: 800px;
+}
+
+#home11{
+    display: flex;
+    align-items: center;
+    background:rgba(0,0,0,0.5);
+    height: 100%;
+    width: 100%;
+}
+
+#home111{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: justify;
+    width: 50%;
+}
+
+#home111 > #title{
+    font-size: 54px;
+    margin: 0px;
+}
+
+#home111 > #content{
+    font-size: 15px;
+    margin: 10px 0px 0px 0px;
+    width: 400px;
 }
