--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -38,7 +38,7 @@ body{
     z-index: 1;
 }
 
-@media only screen and (max-width: 880px) {
+@media (max-width: 880px) {
     #top-nav-bar{
         justify-content: center;
     }
@@ -276,12 +276,56 @@ a:is(:link, :active, :visited).active{
 }
 
 #home111 > #title{
-    font-size: 54px;
+    font-weight: 600;
+    text-align: center;
+    font-size: 80px;
     margin: 0px;
 }
 
 #home111 > #content{
-    font-size: 15px;
+    text-indent: 10%;
+    font-size: 18px;
     margin: 10px 0px 0px 0px;
-    width: 400px;
+    max-width: 570px;
+}
+
+#home2{
+    background-image: url("/img/festive-walk.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    height: 800px;
+}
+
+#home22{
+    display: flex;
+    align-items: center;
+    background:rgba(0,0,0,0.8);
+    height: 100%;
+    width: 50%;
+}
+
+#home222{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: justify;
+    width: 100%;
+}
+
+#home222 > #title{
+    font-weight: 600;
+    text-align: left;
+    font-size: 80px;
+    margin: 0px;
+    max-width: 90%;
+}
+
+#home222 > #content{
+    text-indent: 10%;
+    font-size: 18px;
+    margin: 10px 0px 0px 0px;
+    max-width: 90%;
 }
