--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,25 +17,28 @@
                 <div id="home111">
                     <p class="font-white" id="title">ABOUT ILOILO</p>
                     <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
-                    Wand betrayal parseltongue soul detention elf lion back his. 
-                    Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
-                    Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
-                    Bat forbidden cabbage parchment sunshine. 
-                    Bag moon ground moon quidditch sight grim. </p>
+                        Wand betrayal parseltongue soul detention elf lion back his. 
+                        Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
+                        Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
+                        Bat forbidden cabbage parchment sunshine. 
+                        Bag moon ground moon quidditch sight grim.
+                    </p>
                 </div>
             </div>
-            
         </div>
 
         <div id="home2">
-            <div>
-                <p class="font-white">THE CITY/'S MOST FAMOUS HIGHLIGHTS</p>
-                <p class="font-white"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
-                    Wand betrayal parseltongue soul detention elf lion back his. 
-                    Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
-                    Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
-                    Bat forbidden cabbage parchment sunshine. 
-                    Bag moon ground moon quidditch sight grim. </p>
+            <div id="home22">
+                <div id="home222">
+                    <p class="font-white" id="title">THE CITY'S MOST FAMOUS HIGHLIGHTS</p>
+                    <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf parchment wingardium. 
+                        Wand betrayal parseltongue soul detention elf lion back his. 
+                        Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes. 
+                        Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva. 
+                        Bat forbidden cabbage parchment sunshine. 
+                        Bag moon ground moon quidditch sight grim.
+                    </p>
+                </div>
             </div>
         </div>
         
