Improvements in light-dark-mode.js
Improved text in light-dark-mode.js

Co-Authored-By: WhiteLicorice <96515086+WhiteLicorice@users.noreply.github.com>

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -174,7 +174,7 @@ input[type=search]{
 .font-white{
     font-family: Arial, sans-serif;
     font-style: normal;
-    color: #EAF4FE;
+    color: #FFFFFF;
 }
 
 #greeting > .font-white{
