--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -11,5 +11,19 @@
         <%- include('../partials/side-nav-bar'); %>
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
+
+        <div id="food1">
+            <div id="food11">
+                <div id="food111">
+                    <p class="font-white" id="title">FOOD</p>
+                    <div>
+                        <div>
+                            <!--<img src="/img/festive-walk.png">-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </body>
 </html>
